[package]
name = "harbor-tools-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
serde_yaml = "0.9.34"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
toml = "0.9.10"
